--- a/home/styles.css
+++ b/home/styles.css
@@ -198,7 +198,11 @@ section.about-us p, section.welcome p {
 }
 
 
-
+@media (max-width: 360px) {
+    nav ul li a {
+        font-size: 14px;
+    }
+}
 
 @media (max-width: 768px) {
     .exec {
