--- a/membership/membership.css
+++ b/membership/membership.css
@@ -165,3 +165,9 @@ footer .icon {
     height: 20px;
     width: 20px;
 }
+
+@media (max-width: 360px) {
+    nav ul li a {
+        font-size: 14px;
+    }
+}
